--- a/css/Acceuil.css
+++ b/css/Acceuil.css
@@ -41,6 +41,7 @@ body {
     text-decoration: none;
     color: #ffffff;
     margin-left: 60px;
+    font-size: 20px;
 }
 .navbar a:hover{
     color: #E5A037;
@@ -63,17 +64,17 @@ body {
     top: 7px;
     width: 30px;
 }
-.formulaire {
+/* .formulaire {
     margin-left: 38%;
     margin-top: 8%;
     display: flex;
     color: #ffffff;
     border-top: none;
-}
+} */
 #searchbar{
     position:relative; width:1040px; height:auto;
 }
-.formulaire .champ {
+.champ {
     width: 600px;
     height: 35px;
     background: transparent;
@@ -84,12 +85,6 @@ body {
     border: 2px solid white;
 }
 
-.formulaire .bouton{ 
-    width: 35px; height: 35px; padding: 0; 
-    margin-top: 0.5%;
-    background-color: #FBC364;
-    border: none;
-}
 .logos3 {
     display: flex;
     color: white;
@@ -221,44 +216,57 @@ img:hover {
 }
 .offre{
     display: flex;
+    justify-content: space-between;
+    justify-content: space-around;
+}
+.ctri {
+    margin-top: 6.6%;
+    width: 18%;
+    background-color: transparent;
+    border: solid;
+}
+.ccorne {
+    margin-top: 6.6%;
+    background-color: transparent;
+    border: solid;
+    width: 18%;
+}
+.czel {
+    margin-top: 6.6%;
+    background-color: transparent;
+    border: solid;
+    width: 18%;
 }
 
 .triangle {
-    width: 33%;
-    height: 74%;
-    margin-top: 7%;
-    margin-left: 73%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    width: 51%;
+    height: 105px;
+    margin-left: 25%;
+    margin-top: 13%;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .corne {
-    width: 64%;
-    height: 75%;
+    width: 52%;
+    height: 105px;
     margin-top: 12%;
-    margin-left: 56%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    margin-left: 25%;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .zellige {
-    width: 33%;
-    height: 75%;
-    margin-left: 32%;
-    margin-top: 6.5%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    width: 50%;
+    height: 105px;
+    margin-left: 26%;
+    margin-top: 12.5%;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
-.section1bis{
-    margin-top: 2%;
-    display: flex;
-}
-.cadre {
-    margin-top: -9%;
-}
-.ptri{
-    margin-left: 27%;
+.ptri {
+    text-align: center;
 }
 .pcornede{
-margin-left: 11.5%;
+    text-align: center;
 }
 .pzel{
-    margin-left: 12%;
+    text-align: center;
 }
 .offre1:hover{
     filter: hue-rotate(180deg);
@@ -271,33 +279,6 @@ margin-left: 11.5%;
 .offre3:hover{
     filter: hue-rotate(180deg);
     filter: opacity(0.4) drop-shadow(0 0 0 #ffff);
-}
-.ctri {
-    margin-top: -23%;
-    padding: 11% 15% 12% 1%;
-    margin-left: 21%;
-    margin-right: 108%;
-    background-color: transparent;
-    border: solid;
-    border-color:#FBC364;
-}
-.ccorne {
-    margin-top: -23.5%;
-    padding: 11% 15% 12% 1%;
-    margin-left: 40%;
-    margin-right: 43%;
-    background-color: transparent;
-    border: solid;
-}
-.czel{
-
-    margin-top: -23.5%;
-    padding: 11% 15% 12% 1%;
-    margin-left: 60%;
-    margin-right: 20%;
-    background-color: transparent;
-    border: solid;
-    
 }
 @media screen and (max-width: 768px) {
     .hr1 {
@@ -354,15 +335,15 @@ margin-left: 11.5%;
     color: #E5A037;
     margin-right: 15%;
     margin-left:15%;
-    text-align: center
-    ;
+    text-align: center;
+    font-size: 20px;
 }
 /* DEBUT SECTION footer */
 .section4 {
     margin-top: 20%;
-    padding: 60px 18% 82px 19%;
+    padding: 60px 26% 82px 29%;
     background-color: #FBC364;
-    margin-left: 26%;
+    margin-left: 11%;
     position: absolute;
 }
 .mc2 a{
