--- a/css/Acceuil.css
+++ b/css/Acceuil.css
@@ -9,8 +9,8 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 0px 10%;
-    height: 20%;
+    padding: 15px 10%;
+    height: 14%;
     justify-content: space-between;
     align-items: center;
     background-color:  #FBC364;
@@ -37,6 +37,12 @@ body {
     margin-top: -1%;
     margin-left: -7%;
 }
+.recherche{
+    width: 52%;
+    height: 29px;
+    margin-left: 20%;
+    border-color: white;
+}
 .navbar a{
     text-decoration: none;
     color: #ffffff;
@@ -58,11 +64,6 @@ body {
 }
 .header .hamburger {
     display: none;
-}
-.myimg {
-    position: relative;
-    top: 7px;
-    width: 30px;
 }
 /* .formulaire {
     margin-left: 38%;
@@ -88,7 +89,7 @@ body {
 .logos3 {
     display: flex;
     color: white;
-    margin-top: -9%;
+    margin-top: -6%;
     margin-left: 94%;
     width: 11%;
 }
@@ -117,11 +118,14 @@ img:hover {
         display:none
     }
     .logos3{
-        display: none;
+        width: 20%;
+        margin-left: 106%;
+        margin-top: 11%;
+        display: grid;
     }
-    .logo{
-        margin-left: 35%;
-        margin-top:5%;
+    .logo {
+        margin-left: 37%;
+        margin-top: 2%;
     }
     .header{
         height: 15%;
@@ -159,6 +163,9 @@ img:hover {
     .navbar.show{
         top: 15%;
       }
+      .recherche{
+        display: none;
+      }
 }
 /* FIN DU HEADER */
 /* DEBUT SECTION 1 */
@@ -184,8 +191,9 @@ img:hover {
     box-shadow: #E5A037 0px 7px 29px 0px;
 }
 @media screen and (max-width: 768px) {
-    .section1{
+    .section1 {
         margin-top: 30%;
+        margin-bottom: 11%;
     }
     .co {
         margin-left: 4%;
@@ -219,54 +227,43 @@ img:hover {
     justify-content: space-between;
     justify-content: space-around;
 }
-.ctri {
-    margin-top: 6.6%;
-    width: 18%;
-    background-color: transparent;
-    border: solid;
-}
-.ccorne {
-    margin-top: 6.6%;
-    background-color: transparent;
-    border: solid;
-    width: 18%;
-}
-.czel {
-    margin-top: 6.6%;
-    background-color: transparent;
-    border: solid;
-    width: 18%;
-}
-
 .triangle {
-    width: 51%;
-    height: 105px;
-    margin-left: 25%;
-    margin-top: 13%;
+    width: 141%;
+    height: 204px;
+    margin-left: 64%;
+    margin-top: 40%;
     box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .corne {
-    width: 52%;
-    height: 105px;
-    margin-top: 12%;
-    margin-left: 25%;
+    width: 90%;
+    height: 202px;
+    margin-top: 27%;
+    margin-left: 4%;
     box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .zellige {
-    width: 50%;
-    height: 105px;
-    margin-left: 26%;
-    margin-top: 12.5%;
+    width: 108%;
+    height: 201px;
+    margin-left: -96%;
+    margin-top: 34%;
     box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .ptri {
     text-align: center;
+    margin-left: 39%;
+    margin-right: -131%;
+    color: #E5A037;
 }
 .pcornede{
     text-align: center;
+    margin-left: -126%;
+    margin-right: -127%;
+    color: #E5A037;
 }
 .pzel{
     text-align: center;
+    color: #E5A037;
+    margin-left: -186%;
 }
 .offre1:hover{
     filter: hue-rotate(180deg);
@@ -286,15 +283,36 @@ img:hover {
         margin-right: 30%;
     }
     .triangle {
-        margin-left: 39%;
+        margin-left: 13%;
+        width: 73%;
+        height: 49%;
+        margin-top: 22%;
+    }
+    .ptri {
+        margin-left: -134%;
+        text-align: center;
     }
     .corne {
-        margin-left: 20%;
+        width: 135%;
+        height: 49%;
+        margin-left: 3%;
+        margin-top: 40%;
+    }
+    .pcornede {
+        text-align: center;
+        margin-left: 24%;
+        margin-right: -19%;
     }
     .zellige {
-        margin-left: 29%
+        margin-left: 29%;
+        width: 61%;
+        height: 49%;
+        margin-top: 18%;
     }
-
+    .pzel {
+        text-align: center;
+        margin-left: 19%;
+    }
 }
 /* FIN DE LA SECTION 2 */
 /* DEBUT SECTION 3 */
@@ -338,57 +356,8 @@ img:hover {
     text-align: center;
     font-size: 20px;
 }
-/* DEBUT SECTION footer */
-.section4 {
-    margin-top: 20%;
-    padding: 60px 26% 82px 29%;
-    background-color: #FBC364;
-    margin-left: 11%;
-    position: absolute;
-}
-.mc2 a{
-    text-decoration: none;
-    color: #ffffff;
-    display: flex;
-}
-.mc2 a:hover{
-    color: #E5A037;
-}
-.map2 {
-    margin-left: -79%;
-    margin-top: 13%;
-}
-.cift2 {
-    margin-left: 112%;
-    margin-top: -89%;
-    font-size: 101%;
-}
-.menu2 {
-    font-size: 212%;
-    margin-bottom: 2%;
-}
-.contact2 {
-    font-size: 212%;
-    margin-bottom: 5%;
-}
-.acceuil2{
-    margin-left: 4%;
-}
-.patisseries2{
-    margin-left: 1%;
-}
-.plats2{
-    margin-left: 6%;
-}
-.réservations2{
-    margin-left: -2%
-}
-.informations2{
-    margin-left: -14%;
-}
-.propos2{
-    margin-left: 1%;
-}
+
+
 .polya {
     margin-left: 73.5%;
     margin-top: 19.9%;
@@ -400,4 +369,187 @@ img:hover {
     width: 30%;
     margin-left: -2%;
     position: absolute;
+}
+/* DEBUT SECTION footer */
+.footer{
+    width: 20%;
+    padding: 7% 40%;
+    background-color: #FBC364;
+    margin-top: 10%;
+    text-align: center;
+}
+.logo2{
+    color: #ffffff;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 40px;
+    margin-top: -2%;
+    margin-left: 13%;
+}
+.souslogo{
+    color: #fffffb;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 12px;
+    margin-top: -17%;
+    margin-left: 13%;
+}
+.copy{
+    position: absolute;
+    width: 20%;
+    padding: 0.5% 39% 0.5% 40%;
+    background-color: #ffd387;
+    margin-top: 14%;
+    margin-left: -39.6%;
+}
+.right{
+    font-size: 63%;
+    color: white;
+    margin-left: 2%;
+}
+.mc2 a{
+    text-decoration: none;
+    color: #ffffff;
+    display: flex;
+}
+.mc2 a:hover{
+    color: #E5A037;
+}
+.map2 {
+    margin-left: -124%;
+    margin-top: -45%;
+}
+.cift2 {
+    margin-left: 174%;
+    margin-top: -52.5%;
+    font-size: 101%;
+    display: block;
+}
+.menu2 {
+    font-size: 212%;
+    margin-bottom: 2%;
+    color: #ffffff;
+    margin-left: -82%;
+}
+.contact2 {
+    font-size: 212%;
+    margin-left: -4%;
+    margin-bottom: 5%;
+    margin-top: -0.5%;
+    color: #ffffff;
+}
+.acceuil2{
+    margin-left: 1%;
+}
+.patisseries2{
+    margin-left: 0.5%;
+}
+.plats2{
+    margin-left: 2%;
+}
+.réservations2{
+    margin-left: 0%
+}
+.informations2{
+    margin-left: -3.5%;
+}
+.propos2{
+    margin-left: 1%;
+}
+.insta2{
+    margin-bottom: 5%;
+}
+.facebook2{
+    margin-bottom: 5%;
+}
+.téléphone2{
+    margin-bottom: 5%;
+}
+@media screen and (max-width: 768px) {
+    .footer {
+        width: 18%;
+        padding: 12% 40%;
+        background-color: #FBC364;
+        margin-top: 10%;
+        text-align: center;
+        position: absolute;
+    }
+
+    .copy {
+        position: absolute;
+        width: 21%;
+        padding: 0.5% 39% 0.5% 40%;
+        background-color: #ffd387;
+        margin-top: 12%;
+        margin-left: -40.8%;
+    }
+    .logo2 {
+        color: #ffffff;
+        font-family: 'Architects Daughter', cursive;
+        font-size: 40px;
+        margin-top: -5%;
+        margin-left: -1%;
+        position: absolute;
+    }
+    .souslogo {
+        color: #fffffb;
+        font-family: 'Architects Daughter', cursive;
+        font-size: 12px;
+        margin-top: 1%;
+        position: absolute;
+        margin-left: -1%;
+    }
+    .acceuil2 {
+        margin-left: 2%;
+        margin-top: 8%;
+    }
+    .menu2 {
+        font-size: 212%;
+        color: #ffffff;
+        margin-left: -1%;
+        position: absolute;
+        margin-top: -6%;
+    }
+    .patisseries2 {
+        margin-left: -1%;
+    }
+    .plats2 {
+        margin-left: 4%;
+    }
+    .réservations2 {
+        margin-left: -4%;
+    }
+    .informations2 {
+        margin-left: -16.5%;
+    }
+    .propos2 {
+        margin-left: -1%;
+    }
+    .cift2 {
+        margin-left: 187%;
+        margin-top: -141.5%;
+        font-size: 101%;
+        display: block;
+    }
+    .contact2 {
+        font-size: 212%;
+        position: absolute;
+        color: #ffffff;
+        margin-top: 5%;
+        margin-left: -1%;
+    }
+    .téléphone2 {
+        position: absolute;
+        margin-top: 21%;
+        margin-left: 2%;
+    }
+    
+    .facebook2 {
+        position: absolute;
+        margin-top: 17%;
+        margin-left: 2%;
+    }
+    .insta2 {
+        margin-top: 13%;
+        position: absolute;
+        margin-left: 2%;
+    }
 }
