--- a/css/reservation.css
+++ b/css/reservation.css
@@ -5,13 +5,12 @@
    padding: 20px;
    border: 1px solid #ccc;
    background-color: #e2c064;
-   margin-top: 20%;
-   position: absolute;
+   margin-top: -26%;
 }
  
  
  /* Style the input fields */
- input[type=text], input[type=email], textarea {
+ .nom, .email, textarea {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -40,4 +39,8 @@
     font-weight: bold;
     margin-bottom: 10px;
  }
- 
+ @media screen and (max-width: 768px) {
+   .formr{
+      margin: 217px 0px 0px 171px;
+   }
+ }
