--- a/css/patiss.css
+++ b/css/patiss.css
@@ -8,8 +8,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 15%;
-    margin-left: 0%;
-    margin-right: 6%;
 }
 .photo1{
     width: 10%;
@@ -37,8 +35,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10%;
-    margin-left: 0%;
-    margin-right: 6%;
 }
 .photo5{
     width: 10%;
@@ -62,12 +58,17 @@
     padding: 10% 5% 10% 5%;
     background-color: white;
 }
-.prix2{
+.prix2 {
     margin-top: 21%;
-    margin-left: -25%;
+    margin-left: -17%;
     margin-bottom: -4%;
     color: #E5A037;
     text-align: center;
+}
+.ajou {
+    margin-top: 25%;
+    margin-bottom: -23%;
+    margin-left: -10%;
 }
 @media screen and (max-width: 768px) {
     .pat{
