--- a/css/plat.css
+++ b/css/plat.css
@@ -8,8 +8,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 15%;
-    margin-left: 0%;
-    margin-right: 6%;
 }
 .photo12{
     width: 10%;
@@ -37,8 +35,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10%;
-    margin-left: 0%;
-    margin-right: 6%;
 }
 .photo52{
     width: 10%;
@@ -64,10 +60,15 @@
 }
 .prix22{
     margin-top: 21%;
-    margin-left: -25%;
+    margin-left: -17%;
     margin-bottom: -4%;
     color: #E5A037;
     text-align: center;
+}
+.ajou2 {
+    margin-top: 25%;
+    margin-bottom: -23%;
+    margin-left: -10%;
 }
 @media screen and (max-width: 768px) {
     
