--- a/css/reservation.css
+++ b/css/reservation.css
@@ -5,7 +5,8 @@
    padding: 20px;
    border: 1px solid #ccc;
    background-color: #e2c064;
-   margin-top: -26%;
+   margin-top: 23%;
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
  
  
@@ -21,7 +22,7 @@
  
  
  /* Style the submit button */
- input[type=submit] {
+.submit {
     width: 100%;
     background-color: #8d7b2c6e;
     color: white;
