--- a/css/patiss.css
+++ b/css/patiss.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 15%;
-    margin-right: 5.5%;
+
 }
 .photo1{
     width: 10%;
@@ -36,7 +36,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10%;
-    margin-right: 5.5%;
 }
 .photo5{
     width: 10%;
@@ -61,14 +60,51 @@
     background-color: white;
 }
 .prix2 {
-    margin-top: 21%;
-    margin-left: -25%;
-    margin-bottom: -4%;
+    margin-top: 15%;
+    margin-left: 1%;
+    margin-bottom: 6%;
     color: #E5A037;
     text-align: center;
 }
-.ajou {
-    margin-top: 2%;
+.basimg{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-74%;
+}
+.basimg2{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-24%;
+}
+.basimg3{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:25%;
+}
+.basimg4{
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 75%;
+}
+.basimg5{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-74%;
+}
+.basimg6{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-24%;
+}
+.basimg7{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:25%;
+}
+.basimg8{
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 75%;
 }
 @media screen and (max-width: 768px) {
     .pat{
