--- a/css/plat.css
+++ b/css/plat.css
@@ -60,15 +60,50 @@
 }
 .prix22{
     margin-top: 21%;
-    margin-left: -17%;
-    margin-bottom: -4%;
+    margin-left: -3%;
+    margin-bottom: 9%;
     color: #E5A037;
     text-align: center;
 }
-.ajou2 {
-    margin-top: 25%;
-    margin-bottom: -23%;
-    margin-left: -10%;
+.basimg12{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-74%;
+}
+.basimg22{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-24%;
+}
+.basimg32{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:25%;
+}
+.basimg42{
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 75%;
+}
+.basimg52{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-74%;
+}
+.basimg62{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:-24%;
+}
+.basimg72{
+    position: absolute;
+    margin-top: 20%;
+    margin-left:25%;
+}
+.basimg82{
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 75%;
 }
 @media screen and (max-width: 768px) {
     
