--- a/css/reservation.css
+++ b/css/reservation.css
@@ -8,8 +8,10 @@
    margin-top: 23%;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
- 
- 
+.titrr{
+   color: white;
+   text-align: center;
+}
  /* Style the input fields */
  .nom, .email, textarea {
     width: 100%;
