--- a/css/contactp.css
+++ b/css/contactp.css
@@ -11,10 +11,10 @@
     margin-bottom: 2%;
 }
 .pmailc{
-    font-size: 120%;
-    color: #E5A037;
+    font-size: 168%;
+    color: #875706;
     margin-left: 8.5%;
-    margin-top: 2.5%;
+    margin-top: 2%;
     font-family: 'Architects Daughter', cursive;
 }
 .instac{
@@ -23,10 +23,10 @@
     margin-left: 0.5%;
 }
 .pinstac{
-    font-size: 120%;
-    color: #E5A037;
+    font-size: 168%;
+    color: #875706;
     margin-left: 8.7%;
-    margin-top: 2.5%;
+    margin-top: 2%;
     font-family: 'Architects Daughter', cursive;
 }
 .facec{
@@ -34,10 +34,10 @@
     margin-left: 0.2%;
 }
 .pfacec{
-    font-size: 120%;
-    color: #E5A037;
+    font-size: 168%;
+    color: #875706;
     margin-left: 8.5%;
-    margin-top: 2.5%;
+    margin-top: 2%;
     font-family: 'Architects Daughter', cursive;
 }
 .propo{
