--- a/css/Acceuil.css
+++ b/css/Acceuil.css
@@ -181,18 +181,21 @@ img:hover {
 /* DEBUT SECTION 1 */
 .co {
     position: absolute;
-    margin-left: -32%;
-    margin-top: 11.5%;
+    margin-left: -55%;
+    margin-top: 13.5%;
     color: #ffffff;
     text-decoration: none;
+    font-size: 212%;
+    font-family: 'Architects Daughter', cursive;
 }
 .co:hover{
     color: #E5A037;
 }
 .section1 {
-    margin-top: 17%;
-    margin-left: 20%;
+    margin-top: 12%;
+    margin-left: 0%;
     margin-right: 20%;
+    width: 100%;
     box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
 }
 .section1:hover{
@@ -200,7 +203,7 @@ img:hover {
 }
 .dough{
     width: 100%;
-    height: 369px;
+    height: 483px;
 }
 @media screen and (max-width: 768px) {
     .section1 {
@@ -214,26 +217,12 @@ img:hover {
 }
 /* FIN SECTION1 */
 /* DEBUT SECTION 2 */
-.hr1 {
-    border: none;
-    border-top: 3px double #E5A037;
-    overflow: visible;
-    text-align: center;
-    height: 5px;
-    margin-top: 5%;
-    color:#E5A037;
-    margin-left: 31%;
-    margin-right: 31%;
-    margin-bottom: 4%;
-}
-.hr1:after{
-    content: "Nos Offres";
-    background: #fff;
-    padding: 0 4px;
-    position: relative;
-    top: -13px;
-    color:#E5A037;
-    background-color: #f3e8d6;
+.hr{
+       text-align: center;
+    color: #e5a037;
+    margin-bottom: 6%;
+    margin-top: 6%;
+    font-size: 194%;
 }
 .offre{
     display: flex;
@@ -328,107 +317,76 @@ img:hover {
     }
 }
 /* FIN DE LA SECTION 2 */
-/* DEMO */
-/* html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .pic-ctn {
-    width: 100vw;
-    height: 200px;
-  }
-  
-  @keyframes display {
-    0% {
-      transform: translateX(200px);
-      opacity: 0;
-    }
-    10% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    20% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    30% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-  }
-  
-  .pic-ctn {
-    position: relative;
-    width: 100vw;
-    height: 300px;
-    margin-top: 15vh;
-  }
-  
-  .pic-ctn > img {
-    position: absolute;
-    top: -98px;
-    left: calc(34% - 100px);
-    opacity: 0;
-    animation: display 9s infinite;
+/* Début SECTION 3 */
+.titavis{
+    text-align: center;
+    color: #e5a037;
+    margin-bottom: 10%;
+    margin-top: 27%;
 }
-  
-  img:nth-child(2) {
-    animation-delay: 2s;
-  }
-  img:nth-child(3) {
-    animation-delay: 4s;
-  }
-  img:nth-child(4) {
-    animation-delay: 1s;
-  }
-  img:nth-child(5) {
-    animation-delay: 1s;
-  } */
-  /* FIN DEMO */
-  /* CARROUSEL YTB */
-  /* #carrousel{
-    width: 800px;
-    height: 400px;
-    border: solid 4px #fff;
-    box-shadow:  0 0 14px rgba(0, 0, 0, 0.3);
-    position: relative;
-    margin-left: 24%;
-  }
-  #container{
-    width: 800px;
-    height: 400px;
-  }
-  .bouton{
+.sectioninsta{
+    margin: 0% 15% 0% 20%;
+    color: #e5a037;
+}
+.avis1{
+    width: 68%;
+    background-color: white;
+    margin: 0% 10% 10% 0%;
+    padding: 5% 0% 5% 15%;
+}
+.avis2{
+    width: 68%;
+    background-color: white;
+    margin-bottom: 10%;
+    padding: 5% 0% 5% 15%;
+}
+.avis3{
+    width: 68%;
+    background-color: white;
+    margin: 0% 10% 0% 0%;
+    padding: 5% 0% 5% 15%;
+
+}
+.avis4{
+    width: 68%;
+    background-color: white;
+    padding: 5% 0% 5% 15%;
+}
+.avis12{
+    display: flex;
+}
+.avis34{
+    display: flex;
+}
+.imgavis1{
+    width: 157px;
+    height: 220px;
+    margin-top: -6%;
+    margin-left: -12%;
     position: absolute;
-    width: 70px;
-    cursor: pointer;
-    top: 150px;
-  }
-  #g{
-    left: 0;
-    opacity: 0.4;
-    transform: rotate(0deg);
-  }
-  #d{
-    right: 0;
-    opacity: 0.4;
-    transform: rotate(180deg);
-  }
-  #g :hover{
-    transform: rotate(0deg) scale(1.1);
-    opacity: 1;
-    transition: all 0.3 ease;
-  }
-  #d :hover{
-    transform: rotate(180deg) scale(1.1);
-    opacity: 1;
-    transition: all 0.3 ease;
-  } */
+}
+.imgavis2{
+    width: 157px;
+    height: 220px;
+    margin-top: -6%;
+    margin-left: -12%;
+    position: absolute;
+}
+.imgavis3{
+    width: 157px;
+    height: 220px;
+    margin-top: -6%;
+    margin-left: -12%;
+    position: absolute;
+}
+.imgavis4{
+    width: 157px;
+    height: 220px;
+    margin-top: -6%;
+    margin-left: -12%;
+    position: absolute;
+}
+/* FIN SECTION 3 */
 .polya {
     margin-left: 73.5%;
     margin-top: 19.9%;
@@ -523,7 +481,7 @@ img:hover {
     margin-left: 7%;
 }
 .informations2{
-    margin-left: 1.5%;
+    margin-left: 5%;
 }
 .propos2{
     margin-left: 9%;
@@ -661,7 +619,7 @@ img:hover {
   margin-left: 3%;
 }
 .carousel__item:nth-child(1) {
-  background-image: url(../img/crêpe.PNG../img/image\ triangle\ gateau.PNG);
+  background-image: url(../img/zellige.PNG);
   background-repeat: no-repeat;
   background-size: 100%;
   font-size: 120%;
@@ -684,6 +642,12 @@ img:hover {
   background-repeat: no-repeat;
   background-size: 100%;
   font-size: 120%;
+}
+.carousel__item:nth-child(5) {
+    background-image: url(../img/fekkas\(600\).png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-size: 120%;
 }
 
 .carousel__item[data-pos="0"] {
@@ -744,4 +708,39 @@ img:hover {
     position: absolute;
     margin-top: 140%;
     color: #E5A037;
+}
+.paiement-footer {
+    display: flex;
+    position: absolute;
+    margin-right: 48%;
+    margin-top: -6%;
+    margin-left: -4%;
+}
+.cbi{
+    width: 25%;
+    margin-left: -40%;
+}
+.klarnai{
+    width: 35%;
+    margin-left: 10%;
+}
+.masteri{
+    width: 26%;
+    margin-left: 10%;
+}
+.visai{
+    width: 28%;
+    margin-left: 10%;
+}
+.americani{
+    width: 20%;
+    margin-left: 10%;
+}
+.paypali{
+    width: 32%;
+    margin-left: 10%;
+}
+.applei{
+    width: 30%;
+    margin-left: 10%;
 }
