--- a/css/compte.css
+++ b/css/compte.css
@@ -45,26 +45,26 @@
 .formin{
     width: 10%;
     margin-top: 20%;
-    margin-left: 41%;
+    margin-left: 42.5%;
 }
 .titrin{
     position: relative;
-    margin-left: 42.5%;
+    margin-left: 45%;
     margin-top: 239px;
     margin-bottom: -17%;
 }
 .boutin{
     margin-left: 0%;
-    width: 135%;
+    width: 149%;
 }
 .formin input{
-    padding: 11%
+    padding: 17%;
 }
 .formin label{
     text-align: center;
     margin-left: 30%;
 }
 .formin textarea{
-    padding: 25% 0% 18% 33%;
+    padding: 14% 0% 10% 11%;
     width: 137%;
 }
