--- a/css/patiss.css
+++ b/css/patiss.css
@@ -126,13 +126,126 @@
     }
     .prix2 {
         margin-top: 1%;
-        margin-left: -80%;
+        margin-left: -3%;
         margin-bottom: 4%;
         text-align: center;
+    }
+    .photo1 {
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo2{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg2 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo3{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg3 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo4{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg4 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }    
+    .photo5{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    
+    }
+    .basimg5 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo6{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    
+    }
+    .basimg6 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo7{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg7 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
+    }
+    .photo8{
+        width: 10%;
+        padding: 10% 5% 10% 5%;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+    .basimg8 {
+        position: absolute;
+        margin-top: -24%;
+        margin-left: 19%;
     }
 }
 /* page details produits */
 .product-detail-page {
     margin-top: 20%;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+.product-detail-page {
+    margin-top: 40%;
+    text-align: center;
+}
 }
