--- a/css/Acceuil.css
+++ b/css/Acceuil.css
@@ -1,6 +1,5 @@
 body {
     display: block;
-    margin: 8px;
     background-color: #f3e8d6;
 }
 .header {
@@ -9,12 +8,12 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 15px 10%;
-    height: 14%;
+    width: 100%;
+    height: 17%;
     justify-content: space-between;
     align-items: center;
-    background-color:  #FBC364;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: #FBC364;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 .mr{
     display: flex;
@@ -35,10 +34,10 @@ body {
     font-weight: 700;
     text-decoration: none;
     margin-top: -1%;
-    margin-left: -7%;
+    margin-left: 7%;
 }
-.recherche{
-    width: 52%;
+.recherche {
+    width: 667px;
     height: 29px;
     margin-left: 20%;
     border-color: white;
@@ -46,16 +45,17 @@ body {
 .navbar a{
     text-decoration: none;
     color: #ffffff;
-    margin-left: 60px;
     font-size: 20px;
 }
 .navbar a:hover{
     color: #E5A037;
 }
-.navbar{
-   display: flex;
-   justify-content: space-between;
-   margin-top: 3%;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 .myimg {
     position: relative;
@@ -90,16 +90,15 @@ body {
 .logos3 {
     display: flex;
     color: white;
-    margin-top: -6%;
-    margin-left: 94%;
-    width: 11%;
+    margin-top: -4.5%;
+    margin-left: 90%;
+    width: 140px;
 }
 .person {
-    width: 25%;
+    width: 17%;
     margin-right: 20%;
     margin-top: -22%;
     margin-bottom: 2%;
-    margin-left: -7%;
 }
 .cart{
     width: 25%;
@@ -116,74 +115,85 @@ img:hover {
     .formulaire{
         display:none
     }
-    .logos3{
+    .logos3 {
         width: 20%;
-        margin-left: 106%;
-        margin-top: 20%;
+        margin-left: 714px;
+        margin-top: 7%;
         display: grid;
+        justify-content: space-between;
     }
     .logo {
-        margin-left: 38%;
-        margin-top: 6%;
+        margin-left: 282px;
+        margin-top: 2%;
     }
-    .header{
-        height: 15%;
+    .header {
+        height: 202px;
     }
     .navbar {
         position: fixed;
         display: flex;
         flex-direction: column;
         margin-left: -5%;
+        margin-top: 41px;
     }
-     .header .navbar{
+    .header .navbar {
         position: fixed;
         flex-direction: column;
-        box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
-        background-color:#ffffff;
+        box-shadow: 0 0.5rem 1.5rem rgb(0 0 0 / 10%);
+        background-color: #ffffff;
         border-radius: 12px;
-        left: 0;
+        left: 58px;
         right: 0;
-        width: 90%;
+        width: 451px;
         align-items: center;
         top: -100%;
-        padding-bottom: 5%;
-        padding-top: 5%;
-        margin-left: 5%;
-    }  
+        padding-bottom: 41px;
+        padding-top: 41px;
+        margin-left: 96px;
+    }
     .navbar a{
         color:#E5A037;
         margin-left: 0px;
     }
     .header .hamburger {
         display: block;
-        margin-left: 19%;
-        margin-top: -2.5%;
+        margin-left: 444px;
+        margin-top: -10px;
+        position: absolute;
     }
-    .navbar.show{
-        top: 15%;
-      }
+    .navbar.show {
+        top: 162px;
+    }
+    .myimg {
+        width: 30px;
+    }
       .recherche{
         display: none;
       }
       .cart {
-        width: 25%;
+        width: 20px;
         margin-top: -6%;
-        margin-left: -3%;
+        margin-left: -3px;
     }
     .person {
-        width: 25%;
-        margin-right: 20%;
+        width: 20px;
+        margin-right: 20px;
         margin-top: 0%;
         margin-bottom: 2%;
-        margin-left: -2%;
+        margin-left: -2px;
     }
     
+}
+@media screen and (max-width: 375px) {
+    .myimg {
+        width: 30px;
+    }
 }
 /* FIN DU HEADER */
 /* DEBUT SECTION 1 */
 .co {
     position: absolute;
-    margin-left: -55%;
+    margin-left: -56%;
     margin-top: 13.5%;
     color: #ffffff;
     text-decoration: none;
@@ -195,9 +205,9 @@ img:hover {
 }
 .section1 {
     margin-top: 12%;
-    margin-left: 0%;
+    margin-left: -1%;
     margin-right: 20%;
-    width: 100%;
+    width: 102%;
     box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
 }
 .section1:hover{
@@ -213,25 +223,29 @@ img:hover {
         margin-bottom: 11%;
     }
     .co {
-        margin-left: 39%;
+        margin-left: 40%;
         position: absolute;
         margin-top: -32%;
     }
     .dough {
-        width: 102%;
+        width: 776px;
         height: 485px;
         margin-left: -1%;
         margin-top: -14%;
     }
 }
+@media screen and (max-width: 375px) {
+    
+}
 /* FIN SECTION1 */
 /* DEBUT SECTION 2 */
-.hr{
-       text-align: center;
+.hr {
+    text-align: center;
     color: #e5a037;
     margin-bottom: 6%;
     margin-top: 6%;
     font-size: 194%;
+    margin-left: 15.5px;
 }
 .offre{
     display: flex;
@@ -324,40 +338,41 @@ img:hover {
         text-align: center;
         margin-left: 19%;
     }
+
 }
 /* FIN DE LA SECTION 2 */
 /* Début SECTION 3 */
-.titavis{
+.titavis {
     text-align: center;
     color: #e5a037;
+    margin-left: 1.5%;
     margin-bottom: 10%;
-    margin-top: 27%;
 }
-.sectioninsta{
-    margin: 0% 15% 0% 20%;
+.sectioninsta {
+    margin: 0% 15% 0% 18%;
     color: #e5a037;
 }
 .avis1{
-    width: 68%;
+    width: 681px;
     background-color: white;
     margin: 0% 10% 10% 0%;
     padding: 5% 0% 5% 15%;
 }
 .avis2{
-    width: 68%;
+    width: 681px;
     background-color: white;
     margin-bottom: 10%;
     padding: 5% 0% 5% 15%;
 }
 .avis3{
-    width: 68%;
+    width: 681px;
     background-color: white;
     margin: 0% 10% 0% 0%;
     padding: 5% 0% 5% 15%;
 
 }
 .avis4{
-    width: 68%;
+    width: 681px;
     background-color: white;
     padding: 5% 0% 5% 15%;
 }
@@ -466,45 +481,46 @@ img:hover {
     position: absolute;
 }
 /* DEBUT SECTION footer */
-.footer{
-    width: 20%;
-    padding: 7% 40%;
+.footer {
+    width: 314px;
+    padding: 107px 40%;
     background-color: #FBC364;
     position: absolute;
     margin-top: 10%;
+    margin-left: -1%;
     text-align: center;
 }
-.logo2{
+.logo2 {
     color: #ffffff;
     font-family: 'Architects Daughter', cursive;
     font-size: 40px;
-    margin-top: -2%;
-    margin-left: -4%;
+    margin-left: 15%;
 }
-.souslogo{
+.souslogo {
     color: #fffffb;
     font-family: 'Architects Daughter', cursive;
     font-size: 12px;
-    margin-top: -17%;
-    margin-left: -6%;
+    margin-top: -32%;
+    margin-left: -15%;
+    margin-right: -42%;
 }
-.logoetsous{
-    margin-top: -5%;
+.logoetsous {
+    margin-top: -80px;
     position: absolute;
-    margin-left: 4%;
+    margin-left: 3.6%;
 }
-.copy{
+.copy {
     position: absolute;
-    width: 20%;
+    width: 326px;
     padding: 0.5% 39% 0.5% 40%;
     background-color: #ffd387;
     margin-top: 7%;
-    margin-left: -39.6%;
+    margin-left: -40%;
 }
-.right{
-    font-size: 63%;
+.right {
+    font-size: 11px;
     color: white;
-    margin-left: -16%;
+    margin-left: 0%;
 }
 .mc2 a{
     text-decoration: none;
@@ -519,13 +535,12 @@ img:hover {
     margin-top: -34%;
 }
 .cift2 {
-    margin-left: 174%;
-    margin-top: -52.5%;
-    font-size: 101%;
+    margin-left: 176%;
+    margin-top: -55%;
     display: block;
 }
-.cift2 a{
-    margin-left: 2%;
+.cift2 a {
+    margin-left: 1.5%;
 }
 .menu2 {
     font-size: 212%;
@@ -535,9 +550,6 @@ img:hover {
 }
 .contact2 {
     font-size: 212%;
-    margin-left: -4%;
-    margin-bottom: 5%;
-    margin-top: -0.5%;
     color: #ffffff;
 }
 .acceuil2{
@@ -559,18 +571,20 @@ img:hover {
     margin-left: 9%;
 }
 .insta2{
-    margin-bottom: 5%;
+    position: absolute;
 }
 .facebook2{
-    margin-bottom: 5%;
+    margin-top: 2%;
+    position: absolute;
 }
 .téléphone2{
-    margin-bottom: 5%;
+    margin-top: 4%;
+    position: absolute;
 }
 .paiement-footer {
     display: flex;
     position: absolute;
-    margin-right: 48%;
+    margin-right: 43%;
     margin-top: 5%;
     margin-left: 3%;
     height: 10%;
@@ -605,37 +619,39 @@ img:hover {
 }
 @media screen and (max-width: 768px) {
     .footer {
-        width: 18%;
-        padding: 12% 40%;
+        width: 24%;
+        padding: 12% 39%;
         background-color: #FBC364;
         margin-top: 10%;
+        margin-left: -2%;
         text-align: center;
         position: absolute;
     }
 
     .copy {
         position: absolute;
-        width: 21%;
+        width: 22%;
         padding: 0.5% 39% 0.5% 40%;
         background-color: #ffd387;
-        margin-top: 12%;
+        margin-top: 11%;
         margin-left: -40.8%;
     }
     .logo2 {
         color: #ffffff;
         font-family: 'Architects Daughter', cursive;
         font-size: 40px;
-        margin-top: -5%;
-        margin-left: -1%;
+        margin-top: -6px;
+        margin-left: -39px;
         position: absolute;
     }
     .souslogo {
         color: #fffffb;
         font-family: 'Architects Daughter', cursive;
         font-size: 12px;
-        margin-top: 1%;
+        margin-top: 31px;
         position: absolute;
-        margin-left: -1%;
+        margin-left: -39px;
+        margin-right: -198px;
     }
     .acceuil2 {
         margin-left: 2%;
@@ -658,14 +674,14 @@ img:hover {
         margin-left: -4%;
     }
     .informations2 {
-        margin-left: -16.5%;
+        margin-left: -8.5%;
     }
     .propos2 {
         margin-left: -1%;
     }
     .cift2 {
-        margin-left: 187%;
-        margin-top: -141.5%;
+        margin-left: 292px;
+        margin-top: -104.5%;
         font-size: 101%;
         display: block;
     }
@@ -692,6 +708,28 @@ img:hover {
         position: absolute;
         margin-left: 2%;
     }
+    .map2 {
+        margin-left: -198px;
+        margin-top: -32%;
+    }
+    .paiement-footer {
+        display: flex;
+        position: absolute;
+        margin-right: 44%;
+        margin-top: 8%;
+        margin-left: -1%;
+        height: 10%;
+    }
+    .right {
+        font-size: 63%;
+        color: white;
+        margin-left: -3px;
+    }
+    .logoetsous {
+        margin-top: -5%;
+        position: absolute;
+        margin-left: 38px;
+    }
 }
 /* carrousel */
 .carousel {
@@ -700,15 +738,16 @@ img:hover {
     height: 6%;
     align-items: center;
     font-family: Arial;
-    margin-bottom: 25%;
+    margin-bottom: 17%;
     margin-left: -1%;
 }
 .carousel__list {
     display: flex;
     list-style: none;
     position: relative;
-    width: 100%;
-    height: 156px;
+    width: 80%;
+    margin-left: 11%;
+    height: 152px;
     justify-content: center;
     perspective: 300px;
 }
@@ -815,4 +854,167 @@ img:hover {
     position: absolute;
     margin-top: 140%;
     color: #E5A037;
+}
+@media screen and (max-width: 768px) {
+    .carousel__list {
+        display: flex;
+        list-style: none;
+        position: relative;
+        width: 80%;
+        margin-left: 8%;
+        height: 152px;
+        justify-content: center;
+        perspective: 300px;
+    }
+}
+@media screen and (max-width: 375px){
+    .logo {
+        margin-left: 62px;
+        margin-top: 2%;
+    }
+    .header .hamburger {
+        margin-left: 231px;
+        margin-top: -12px;
+    }
+    .logos3 {
+        margin-left: 326px;
+    }
+  .dough {
+    width: 378px;
+    height: 301px;
+    margin-left: -2%;
+    margin-top: 18%;
+}
+    .co {
+        margin-left: 24%;
+        position: absolute;
+        margin-top: -44%;
+    }
+    .carousel__item {
+        width: 158px;
+        height: 158px;
+    }
+    .carousel__list {
+        margin-left: 1%;
+
+    }
+    .textcar1 {
+        margin-left: 20%;
+        margin-top: 150%;
+    }
+    .textcar2 {
+        margin-left: 20%;
+        margin-top: 150%;
+    }
+    .textcar3 {
+        margin-left: 20%;
+        margin-top: 150%;
+    }
+    .textcar4 {
+        margin-left: 20%;
+        margin-top: 150%;
+    }
+    .textcar5 {
+        margin-left: 20%;
+        margin-top: 150%;
+    }
+    .hr {
+    margin-top: 25%;
+    margin-right: 10px;
+    }
+    .titavis {
+        margin-left: 0%;
+    }
+    .header .navbar {
+        width: 287px;
+        padding: 41px 44px;
+        margin-left: 0px;
+        left:0%;
+    }
+    .navbar{
+        margin-top: 39px;
+    }
+    /* Avis */
+    .avis12 {
+        display: flex;
+        flex-direction: column;
+    }
+    .avis34 {
+        display: flex;
+        flex-direction: column;
+    }
+    .avis1 {
+        width: 70%;
+        background-color: white;
+        margin: 40% 8% 40% 31.5%;
+        padding: 5% 2% 3% 15%;
+    }.imgavis1 {
+        width: 157px;
+        height: 174px;
+        margin-top: -3%;
+        margin-left: -45%;
+        position: absolute;
+    }
+    .avis2 {
+        background-color: white;
+        margin-bottom: 40%;
+        padding: 3% 2% 6% 15%;
+        margin-left: 34%;
+    }
+    .imgavis2 {
+        width: 157px;
+        height: 195px;
+        margin-top: -2%;
+        margin-left: -46.5%;
+        position: absolute;
+    }
+    .avis3 {
+        background-color: white;
+        margin-bottom: 40%;
+        padding: 3% 2% 6% 15%;
+        margin-left: 34%;
+    }
+    .imgavis3 {
+        width: 157px;
+        height: 195px;
+        margin-top: -2%;
+        margin-left: -46.5%;
+        position: absolute;
+    }
+    .avis4 {
+        background-color: white;
+        margin-bottom: 40%;
+        padding: 3% 2% 6% 15%;
+        margin-left: 34%;
+    }
+    .imgavis4 {
+        width: 157px;
+        height: 195px;
+        margin-top: -2%;
+        margin-left: -46.5%;
+        position: absolute;
+    }
+    /* FOOTER */
+    .mc2{
+        display: none;
+    }
+    .logoetsous {
+        margin-top: -10%;
+        position: absolute;
+        margin-left: 0%;
+    }
+    .paiement-footer {
+        display: flex;
+        position: absolute;
+        margin-right: 33%;
+        margin-top: 4%;
+        margin-left: -10%;
+        height: 15%;
+    }
+    .right {
+        font-size: 63%;
+        color: white;
+        margin-left: -90%;
+        margin-right: -79%;
+    }
 }
