--- a/css/contactp.css
+++ b/css/contactp.css
@@ -3,7 +3,7 @@
     margin-top: -9%;
     margin-left: 17%;
     color: #E5A037;
-    font-family: 'Architects Daughter', cursive;
+    /* font-family: 'Architects Daughter', cursive; */
     font-size: 268%;
 }
 .mailc{
@@ -47,34 +47,93 @@
     padding: 26%;
     background-size: 59%;
     margin-bottom: -26%;
-    font-family: 'Architects Daughter', cursive;
 }
 @media screen and (max-width: 768px) {
     .propo {
-        width: 75%;
-        padding: 26% 96% 21% 0%;
-        background-size: 59%;
-        margin-bottom: -26%;
-        font-family: 'Architects Daughter', cursive;
+        width: 74%;
+        background-size: 144%;
+        margin-bottom: -16%;
+        margin-left: -2%;
+        margin-top: 10%;
     }
     .mailc {
         display: flex;
         margin-bottom: 2%;
-        margin-left: 5%;
+        margin-left: -28%;
         margin-right: 20%;
+        margin-top: 32%;
     }
     .instac {
         display: flex;
         margin-bottom: 2%;
-        margin-left: 5%;
-        margin-right: 20%;
+        margin-left: -27%;
+        margin-right: 13%;
     }
     
     .facec {
         display: flex;
-        margin-left:5%;
+        margin-left: -28%;
         margin-right: 27%;
     }
+    .tic {
+        margin-left: 14%;
+        margin-top: 5%;
+    }
 
-
+    .pmailc {
+        font-size: 168%;
+        color: #875706;
+        margin-left: 8.5%;
+        margin-top: 10%;
+        font-family: 'Architects Daughter', cursive;
+    }
+}
+@media screen and (max-width: 375px) {
+    .tic {
+        margin-left: 3%;
+        margin-top: -17%;
+    }
+    .mailc {
+        display: flex;
+        margin-bottom: 2%;
+        margin-left: -28%;
+        margin-right: 20%;
+        margin-top: -6%;
+    }
+    .pmailc {
+        font-size: 125%;
+        color: #875706;
+        margin-left: 8.5%;
+        margin-top: 10%;
+        font-family: 'Architects Daughter', cursive;
+    }
+    .instac {
+        display: flex;
+        margin-bottom: 2%;
+        margin-left: -26%;
+        margin-right: 13%;
+        margin-top: 7%;
+    }
+    .pinstac {
+        font-size: 125%;
+        color: #875706;
+        margin-left: 9.7%;
+        margin-right: -20%;
+        margin-top: 2%;
+        font-family: 'Architects Daughter', cursive;
+    }
+    .pfacec {
+        font-size: 125%;
+        color: #875706;
+        margin-left: 7.5%;
+        margin-top: 2%;
+        font-family: 'Architects Daughter', cursive;
+    }
+    .propo {
+        width: 74%;
+        background-size: 161%;
+        margin-bottom: -23%;
+        margin-left: -2%;
+        margin-top: 56%;
+    }
 }
