--- a/css/infoliv.css
+++ b/css/infoliv.css
@@ -22,6 +22,13 @@ h3{
 }
 @media screen and (max-width: 768px) {
     .infoliv {
-        margin-top: 35%;
+        margin-top: 40%;
+        margin-bottom: 10%;
     }
+}
+@media screen and (max-width: 375px){
+.infoliv {
+    margin-top: 73%;
+    margin-bottom: 10%;
+}
 }
